Added script path

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <link type="text/css" rel="stylesheet" href="style/style.css">
     
     <title>RunRoute</title>
-</head>
 
+    <!-- SCRIPT FOR TURF.JS -->
+    <script src='https://npmcdn.com/@turf/turf/turf.min.js'></script>
+</head>
 <body>
 
 <div class="wrapper clearfix">
