--- a/index.html
+++ b/index.html
@@ -2,23 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link type="text/css" rel="stylesheet" href="style/style.css">
+    <link type="text/css" rel="stylesheet" href="./style.css">
     
     <title>RunRoute</title>
 
-    <!-- SCRIPT FOR TURF.JS -->
-    <script src='https://npmcdn.com/@turf/turf/turf.min.js'></script>
+        <!-- SCRIPT FOR TURF.JS -->
 </head>
 <body>
+        <div class="wrapper clearfix">
 
-<div class="wrapper clearfix">
-        
-        <div class="app-panel">
-                <script>
-                        var bbox = turf.bbox(features);
-                </script>
+                <div class="app-panel">
+                        <h1>Hello kalkun!</h1>
+                </div>
         </div>
-    </div>
 </body>
 
 </html>
