--- a/index.html
+++ b/index.html
@@ -9,17 +9,21 @@
     <!-- SCRIPT FOR TURF.JS -->
     <script src='https://npmcdn.com/@turf/turf/turf.min.js'></script>
     
+    <!-- GOOGLE MAP SCRIPTS -->
     <script src='map.js'></script>
 
+    <!-- GOOGLE MAP API -->
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDihtGB2yvEZybh_nwMGyew5tj8fWRLafM&callback=initMap"
     type="text/javascript"></script>
 </head>
+
 <body>
     <div class="wrapper clearfix">
 
         <div class="app-panel">
-                  <h1>Hello kalkun!</h1>
-                  <div id="map"></div>
+            <div class="map-panel">
+                    <div id="map"></div>
+            </div>
         </div>
     </div>
 </body>
