--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                 <i class="material-icons prefix">directions_run</i>
                 <input class="left validate" id="field" name="field" placeholder="Desired Distance to Run">
                 <span class="helper-text" data-error="Wrong distance entered" data-success=""></span>
+                <textfield></textfield>
             </form>
         </div>
     </div>
