new features n shit

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- <script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/additional-methods.min.js"></script> --> 
 </head>
 
-<div class="input-wrapper">
+<div class="input-wrapper-1">
     <div class="row">
         <div class="input-field col s6">
             <form id="myform">
@@ -41,12 +41,16 @@
         </div>
     </div>
 </div>
+
+<div class="input-wrapper-2">
+        <div class="counter" data-count="150">0</div>
+</div>
         
         <div class="wrapper clearfix">
             <div class="app-panel"></div>
         </div>
         
-        <div class="map-panel">
+        <div class="map-panel"> 
             <div id="map"></div>
         </div>
 
