--- a/index.html
+++ b/index.html
@@ -34,16 +34,18 @@
         <div class="input-field col s6">
             <form id="myform">
                 <i class="material-icons prefix">directions_run</i>
-                <input class="left validate" id="field" name="field" placeholder="Desired Distance to Run">
-                <span class="helper-text" data-error="Wrong distance entered" data-success=""></span>
+                <input class="left validate" id="field" name="field" placeholder="Desired Distance to Run in KM">
                 <textfield></textfield>
             </form>
         </div>
     </div>
 </div>
+<div class="input-wrapper-3">
+        <p>Distance in KM that you would have to run:</p>
+</div>
 
 <div class="input-wrapper-2">
-        <div class="counter" data-count="150">0</div>
+        <div class="counter" data-count="150">0</div> 
 </div>
         
         <div class="wrapper clearfix">
