--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </div>
 
 <div class="button">
-    <button style="display: none;" onclick="redirect()" id="customButton" target="_blank">Võmp</button>
+    <button style="display: none;" onclick="redirect()" id="customButton" target="_blank">Directions</button>
 </div>
 
 <div class="input-wrapper-2">
